Fixed vertical alignment of control labels.

--- a/src/style.css
+++ b/src/style.css
@@ -51,22 +51,22 @@ main {
     box-sizing: border-box;
 }
 
-.controls label {
-    display: inline-block;
+.control-group {
+    display: flex;
+    align-items: center;
     margin-bottom: 0.5em;
+}
+
+.controls label {
     font-weight: normal;
     font-size: 10px;
-    vertical-align: middle;
     margin-right: 5px;
 }
 
 .controls input[type="file"],
 .controls input[type="number"] {
     width: 70%;
-    display: inline-block;
-    vertical-align: middle;
     padding: 5px;
-    margin-bottom: 1em;
     border: 1px solid #ddd;
     border-radius: 4px;
     box-sizing: border-box;
